--- a/index.html
+++ b/index.html
@@ -142,10 +142,9 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Created By</h5>
-                <p class="mbr-text">Bhavartha Khawale<br>Himanshu Pareek<br>Aditya Prajapati<br>Aditi Pai</p>
+                <p class="mbr-text">Bhavartha Khawale<br>Aditya Prajapati<br>Himanshu Pareek<br>Aditi Pai</p>
             </div>
         </div>
-
     </div>
 </section>
 
